put things in folders, update partial_trace files

--- a/variance_tests/variance_tests.ipynb
+++ b/variance_tests/variance_tests.ipynb
@@ -12,6 +12,8 @@
     "from scipy import io,integrate,sparse\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "import os,sys\n",
+    "sys.path.insert(0, '..')\n",
     "from partial_trace import *\n",
     "\n",
     "from IPython.display import clear_output\n",
@@ -104,8 +106,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 50.6 ms, sys: 196 µs, total: 50.8 ms\n",
-      "Wall time: 50.9 ms\n"
+      "CPU times: user 118 ms, sys: 8.2 ms, total: 126 ms\n",
+      "Wall time: 126 ms\n"
      ]
     }
    ],
@@ -139,8 +141,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 102 µs, sys: 11 µs, total: 113 µs\n",
-      "Wall time: 93.5 µs\n"
+      "CPU times: user 0 ns, sys: 287 µs, total: 287 µs\n",
+      "Wall time: 281 µs\n"
      ]
     }
    ],
@@ -190,8 +192,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 54.9 s, sys: 747 ms, total: 55.6 s\n",
-      "Wall time: 13.9 s\n"
+      "CPU times: user 1min 40s, sys: 4.21 s, total: 1min 44s\n",
+      "Wall time: 28.1 s\n"
      ]
     }
    ],
@@ -237,8 +239,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('data/variance_tests/variance.npy',out_all,allow_pickle=True)\n",
-    "out_all = np.load('data/variance_tests/variance.npy',allow_pickle=True)"
+    "np.save('data/variance.npy',out_all,allow_pickle=True)\n",
+    "out_all = np.load('data/variance.npy',allow_pickle=True)"
    ]
   },
   {
